--- a/src/app/app.html
+++ b/src/app/app.html
@@ -26,7 +26,7 @@
         class="block w-full  p-6 bg-white border border-gray-200 rounded-lg shadow-sm hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Cargar archivos LÍNEAS DE PEDIDO</h5>
         <p class="text-sm text-gray-600 dark:text-gray-400 mb-3">
-          Puedes seleccionar múltiples archivos. Todos deben tener la misma estructura de columnas.
+          Puedes seleccionar múltiples archivos usando la tecla Ctrl. Todos deben tener la misma estructura de columnas.
         </p>
         <div class="mt-4">
           <input
